Fixed Bug Alignment

--- a/style.css
+++ b/style.css
@@ -204,9 +204,15 @@ html
     align-items: center;
 }
 
-.services
+.service
 {
     text-align: center;
+}
+
+.service:first-child,
+.service:last-child
+{
+    align-self: flex-start;
 }
 
 .service i
@@ -223,5 +229,8 @@ html
     color: #fff;
     background-color: #777;
     width: 25rem;
+    letter-spacing: 0.3rem;
+    transform: skew(-10deg);
+    box-shadow: 0.2rem 0.2rem 0.5rem #555;
 }
 /* End of Section 2 */
